# upload

./: .coveragerc  .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  auth.py  gros-uploader.service  import.sh  pyproject.toml  requirements-analysis.txt  requirements-release.txt  requirements-test.txt  requirements.txt  setup.cfg  sonar-project.properties  upload-session.sh  upload.cfg.example  upload.py
.github/workflows/: upload-tests.yml
encrypted_upload/: __init__.py  __main__.py  application.py  auth.py  bootstrap.py  hash.py
test/: __init__.py  application.py  auth.py  bootstrap.py  hash.py
test/sample/: other.gpg
test/sample/Scripts/: import.sh
typeshed/cherrypy/: __init__.pyi  _cpreqbody.pyi  _cptree.pyi  daemon.pyi  dispatch.pyi
typeshed/cherrypy/lib/: __init__.pyi  auth_digest.pyi  cptools.pyi  httputil.py  sessions.pyi
typeshed/cherrypy/process/: __init__.pyi  wspbus.pyi
typeshed/cherrypy/test/: helper.pyi
typeshed/gpg/: __init__.pyi  core.pyi  errors.pyi  gpgme.pyi
typeshed/gpg_exchange/: exchange.pyi
typeshed/keyring/: __init__.pyi
